# ollama_agent

./: .env.example  .gitignore  LICENSE  config.py  main.py  pyproject.toml  readme.md  requirements.txt
src/: __init__.py  chunker.py  embedder.py  loader.py  rag.py  vectorstore.py
tests/: test_chunker.py
