[project]
name = "local-rag-assistant"
version = "0.1.0"
description = "로컬 LLM 기반 개인 지식 비서 (RAG)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "ollama==0.6.2",
    "chromadb==1.5.9",
    "sentence-transformers==5.5.1",
    "pypdf==5.1.0",
    "python-dotenv==1.0.1",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.6"]

[tool.ruff]
line-length = 100
target-version = "py310"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
